A thumbnail version of each image is now saved

--- a/views/home.jade
+++ b/views/home.jade
@@ -32,4 +32,4 @@ block content
 					div(class="imgContainer")
 						h4(class="imgText imgTitle")=picture.title
 						p(class="imgText imgDescription")=picture.description
-						img(src="images/#{picture.url}")
+						img(src="images/#{picture.thumb_url}")
