Implemented simultaneous crop and 90deg rotation (only for frontend so far)

--- a/views/home.jade
+++ b/views/home.jade
@@ -17,6 +17,7 @@ block content
 				div(class="small-6 columns editImage")
 					div(class="imgPreview")
 						img(src="" id="upload")
+					canvas(class="canvas")
 					a(class="button rotate rotateLeft") Left
 					a(class="button rotate rotateRight") Right
 			div(class="row")
