Crop and rotate now works on backend!

--- a/scss/_misc.scss
+++ b/scss/_misc.scss
@@ -66,6 +66,7 @@ $zoomTiming: 0.2s;
 	// overflow: hidden;
 	
 	.imgContainer{
+		box-shadow: 0 0 10px rgba(0,0,0,.7);
 		position: relative;
 		width:100%;
 		overflow:hidden;
