--- a/views/home.jade
+++ b/views/home.jade
@@ -14,6 +14,11 @@ block content
 					label Short Description:
 						textarea(name="description" type="textarea")
 					input(class="imgUpload" name="picture" type="file")
+					input(id="xData" name="xData")
+					input(id="yData" name="yData")
+					input(id="widthData" name="widthData")
+					input(id="heightData" name="heightData")
+					input(id="rotation" name="rotation")
 				div(class="small-6 columns editImage")
 					div(class="imgPreview")
 						img(src="" id="upload")
