--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,8 @@ html(lang="en")
 	head
 		title= title
 		link(rel="stylesheet" href="stylesheets/style.min.css")
+		link(href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet")
 	body
 		block content
+
 		script(src="javascript/main.min.js")
