--- a/views/home.jade
+++ b/views/home.jade
@@ -2,32 +2,44 @@ extends layout
 
 block content
 	div(class="sidebar medium-4 large-3 columns")
-		h1 Jump!
-		h3 This site is about jumping
-		p Jumping is great, send me pics
-		a(href="#" data-reveal-id="uploadForm") Upload your picture here!
-		form(id="uploadForm" class="reveal-modal" data-reveal name="upload" action="/upload" method="post" enctype="multipart/form-data")
+		div(class="panel")
+			h1 Jump!
+			h3 This site is about jumping
+			p Jumping is great, send me pics
+			a(class="button" href="#" data-reveal-id="uploadForm") Upload your picture here!
+		form(id="uploadForm" class="reveal-modal" name="upload" action="/upload" method="post" enctype="multipart/form-data" data-reveal data-abide)
 			div(class="row")
-				div(class="small-6 columns")
-					label Title:
-						input(name="title" type="text")
-					label Short Description:
-						textarea(name="description" type="textarea")
-					input(class="imgUpload" name="picture" type="file")
-					input(id="xData" name="xData")
-					input(id="yData" name="yData")
-					input(id="widthData" name="widthData")
-					input(id="heightData" name="heightData")
-					input(id="rotation" name="rotation")
-				div(class="small-6 columns editImage")
+				div(class="small-12 columns")
+					div(class="title-field")
+						label Title:
+							input(name="title" type="text" required)
+						small(class="error") What is this picture called?
+					div(class="description-field")
+						label Short Description:
+							textarea(name="description" type="textarea" required)
+						small(class="error") You've gotta provide short description, bro.
+					div(class="upload-field")
+						label Upload Image:
+							input(class="imgUpload" name="picture"  type="file" required)
+						small(class="error") You forgot to upload an image!
+					input(hidden id="xData" name="xData")
+					input(hidden id="yData" name="yData")
+					input(hidden id="widthData" name="widthData")
+					input(hidden id="heightData" name="heightData")
+					input(hidden id="rotation" name="rotation")
+				div(class="small-12 columns editImage")
 					div(class="imgPreview")
 						img(src="" id="upload")
 					canvas(class="canvas")
-					a(class="button rotate rotateLeft") Left
-					a(class="button rotate rotateRight") Right
 			div(class="row")
-				div(class="small-12 columns text-center")
-					button(type="submit") Submit!
+				div(class="small-4 columns")
+					a(class="button pictureButton rotateLeft")
+						i(class="fa fa-undo")
+				div(class="small-4 columns text-center")
+					button(class="pictureButton" type="submit") Submit!
+				div(class="small-4 columns")
+					a(class="button pictureButton rotateRight")
+						i(class="fa fa-repeat")
 			a(class="close-reveal-modal") &#215;
 	div(class="row")
 		div(class="medium-4 large-3 columns")
