changed pic url

--- a/views/home.jade
+++ b/views/home.jade
@@ -50,4 +50,4 @@ block content
 					div(class="imgContainer")
 						h4(class="imgText imgTitle")=picture.title
 						p(class="imgText imgDescription")=picture.description
-						img(src="images/#{picture.thumb_url}")
+						img(src="images/jumpingPics/#{picture.thumb_url}")
