--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,7 +3,7 @@ html(lang="en")
 	head
 		title= title
 		link(rel="stylesheet" href="stylesheets/style.min.css")
-		link(href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet")
+		link(rel="stylesheet" href="stylesheets/foundation-icons/foundation-icons.css")
 	body
 		block content
 
